# rust_react_api

./: .gitignore  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml
backend/migrations/: 20220808131416_user.up.sql
backend/src/: auth.rs  main.rs
backend/src/database/: database.rs  mod.rs  user.rs
backend/src/models/: user.rs
backend/src/routes/: db.rs  mod.rs  user.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/services/: app.service.ts
