[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres", "sqlx_macros"]

[dependencies.sqlx]
version = "0.6.0"
features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"]