[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
dotenv = "0.15.0"
scrypt = "0.10.0"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres", "sqlx_macros"]

[dependencies.sqlx]
version = "0.6.0"
features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "uuid"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]